--- a/client/shopping/src/components/navbar/navbar.css
+++ b/client/shopping/src/components/navbar/navbar.css
@@ -108,6 +108,7 @@ nav a:hover {
   justify-content: center;
   color: #fff;
   font-size: 20px;
+  text-transform: capitalize;
 }
 
 @media screen and (min-width: 800px) {
