--- a/client/shopping/src/containers/viewcart/viewcart.css
+++ b/client/shopping/src/containers/viewcart/viewcart.css
@@ -33,8 +33,8 @@
   padding-top: 1%;
 }
 .removebtn {
-  width: 80% !important;
-  height: 20% !important;
+  width: 30% !important;
+  /* height: 20% !important; */
   color: #fff !important;
   background-color: #fd3030 !important;
 }
@@ -72,9 +72,9 @@
 .clstot {
   display: flex;
   flex-basis: 15%;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 1.2rem;
-  color: #aaa;
+  color: #6d5f5f;
 }
 .clstot {
   justify-content: flex-end;
@@ -88,8 +88,9 @@
 .subtlbl {
   display: flex;
   flex-basis: 20%;
-  color: #aaa;
+  color: #2b2626;
   font-size: 1.3rem;
+  font-weight: 700;
 }
 .subtval {
   display: flex;
