--- a/client/shopping/src/components/footer/footer.css
+++ b/client/shopping/src/components/footer/footer.css
@@ -7,14 +7,14 @@ h3 {
 }
 
 .footer-section {
-  background: #151414;
+  background: var(--primary-color);
   position: relative;
 }
 .footer-cta {
   border-bottom: 1px solid #373636;
 }
 .single-cta i {
-  color: #ff5e14;
+  color: var(--tertiary-color);
   font-size: 30px;
   float: left;
   margin-top: 8px;
@@ -154,14 +154,14 @@ h3 {
   color: #878787;
 }
 .copyright-text p a {
-  color: #ff5e14;
+  color: var(--tertiary-color);
 }
 .footer-menu li {
   display: inline-block;
   margin-left: 20px;
 }
 .footer-menu li:hover a {
-  color: #ff5e14;
+  color: var(--tertiary-color);
 }
 .footer-menu li a {
   font-size: 14px;
