--- a/client/shopping/src/containers/login/login.css
+++ b/client/shopping/src/containers/login/login.css
@@ -7,17 +7,12 @@
   -moz-box-shadow: 0px 10px 34px -15px rgba(0, 0, 0, 0.24);
   box-shadow: 0px 10px 34px -15px rgba(0, 0, 0, 0.24);
 }
-.img,
+.login-image,
 .login-wrap {
-  width: 50%;
+  width: 100%;
 }
-.img {
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-  height: inherit !important;
-  width: 50% !important;
-  padding: 0% !important;
+.login-image {
+  width: 100% !important;
 }
 
 .form-control {
@@ -40,4 +35,44 @@
 label {
   display: inline-block;
   margin-bottom: 0.5rem;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+.logo_container_logo {
+  height: 110px;
+  width: 110px;
+  border: 1.5px solid #fff;
+}
+
+.logo_container_logo > img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+
+@media screen and (min-width: 800px) {
+  .login-image {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    height: inherit !important;
+    width: 50% !important;
+    padding: 2% !important;
+    border-radius: 20px !important;
+  }
+  .login-wrap {
+    width: 50%;
+    box-shadow: -9px 4px 45px -19px rgba(104, 104, 104, 0.24);
+  }
 }
